// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line" style="width: 0px;"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab"><span class="van-ellipsis">title2</span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line" style="width: 0px;"></div>
      <div class="van-tab"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title2</span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line" style="width: 0px;"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab"><span class="van-ellipsis">title2</span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line" style="width: 0px;"></div>
      <div class="van-tab"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title2</span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line" style="width: 0px;"></div>
      <div class="van-tab"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title2</span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 4`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line" style="width: 0px;"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab"><span class="van-ellipsis">title2</span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
